# JsSkia

android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/szw/fresh/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: test.js
android/app/src/main/java/com/szw/fresh/: MainActivity.java  MainApplication.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/szw/fresh/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
android/js_skia/: build.gradle
android/js_skia/src/androidTest/java/com/szw/jsengine/: ExampleInstrumentedTest.java
android/js_skia/src/main/cpp/: CMakeLists.txt  android_log.h  jsengine.cpp  jsengine.h
android/js_skia/src/main/cpp/jni/: js_skia_jni.cpp  skia_render_view.cpp
android/js_skia/src/main/java/com/szw/jsskia/: JsSkiaJNI.java  SkiaRenderView.java
android/js_skia/src/test/java/com/szw/jsengine/: ExampleUnitTest.java
android/jsengine/: build.gradle
android/jsengine/src/main/cpp/: CMakeLists.txt  jsengine.cpp
android/jsengine/src/main/java/com/szw/jsengine/: QuickJsEngine.java
